[package]
name = "dash_to_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.27.0"
curl = "0.4.44"
ffprobe = "0.3.3"
image = "0.24.5"
jpeg-decoder = "0.3.0"
png = "0.17.7"
substring = "1.4.5"
threadpool = "1.8.1"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image"]
